--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.9",
     "axios": "^0.19.2",
+    "emailjs-com": "^2.6.4",
     "graphql": "^15.1.0",
     "netlify-cli": "^2.54.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-barcode": "^1.4.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-paypal-button-v2": "^2.6.2",
